# hermes

./: Cargo.toml  db.sqlite3  package-lock.json  package.json
src/: channel.rs  hermes_error.rs  main.rs  membership.rs  message.rs  permission.rs  role.rs  session.rs  user.rs  utils.rs  ws_statemachine.rs
src/app/: constants.tsx  globals.css  hermes_types.ts  layout.tsx  page.module.css  page.tsx  session_util.ts  utils.ts
src/app/idk/: page.tsx
src/app/login/: login.module.css  page.tsx
