[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = [ "macros" ] }
axum-extra = "0.9.6"

sqlx = { version = "=0.8.1", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

thiserror = "2.0.3"

rand = "0.8.4"
rand_distr = "0.4.3"

urlencoding = "2.1.3"

strum = "0.26.3"
strum_macros = "0.26.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
